--- a/index.html
+++ b/index.html
@@ -145,10 +145,9 @@
 
             // !--- هام جداً ---!
             // تأكد من استبدال الرابط التالي برابط Render.com الخاص بك
-            const backendUrl = 'https://shashaflix.onrender.com/';
-            
-            // ثالثاً، نرسل البيانات إلى الخادم
-            fetch(backendUrl, {
+const backendUrl = 'https://shashaflix.onrender.com/';
+// ...
+fetch(backendUrl, {https://shashaflix.onrender.com/})
                 method: 'POST', // نوع الطلب
                 headers: {
                     'Content-Type': 'application/json' // نوع البيانات
