--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#">📺 مسلسلات</a>
     </div>
 
-    <header class="navbar">
+<header class="navbar">
         <div class="nav-left-section">
             <button class="menu-toggle-btn" onclick="toggleMenu()">&#9776;</button>
             <div class="navbar-brand">
@@ -35,11 +35,11 @@
             <a href="#">أفلام</a>
         </nav>
 
-        <div class="nav-account">
+        <div class="nav-account" style="display: flex; gap: 10px;">
+            <button class="btn btn-secondary">دخول</button>
             <button id="open-signup-btn" class="btn btn-primary">حساب جديد</button>
         </div>
     </header>
-
     <section class="hero-section">
         <div class="hero-content">
             <h2>اسم العمل المميز</h2>
