--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
         <div class="nav-left-section">
             <button class="menu-toggle-btn" onclick="toggleMenu()">&#9776;</button>
             <div class="navbar-brand">
-                <h1>SHASHAFLIX</h1>
+                <section class="hero-section">
+        <div class="hero-content">
+            
+            <img src="hero-logo.png" alt="عنوان العمل" class="hero-logo-img">
+            
+            <p>وصف قصير للعمل المميز في عدة أسطر لجذب انتباه المشاهد...</p>
+            <button class="btn btn-primary" onclick="window.location.href='watch.html'">▶ تشغيل</button>
+            <button class="btn btn-secondary">مزيد من المعلومات</button>
+        </div>
+    </section>
             </div>
         </div>
 
