--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button class="close-sidebar-btn" onclick="toggleMenu()">&times;</button>
         <h3 style="color: var(--primary-color); text-align: center; margin-bottom: 20px;">القائمة</h3>
         <a href="#"> الرئيسية</a>
-        <a href="#" onclick="document.getElementById('login-modal').classList.add('visible'); toggleMenu()">👤 تسجيل الدخول</a>
+        <a href="#" onclick="document.getElementById('login-modal').classList.add('visible'); toggleMenu()"> تسجيل الدخول</a>
         <a href="#"> الأكثر مشاهدة</a>
         <a href="#"> أفلام</a>
         <a href="#"> مسلسلات</a>
