--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         
         <div class="nav-left-section">
             <button class="menu-toggle-btn" onclick="toggleMenu()">&#9776;</button>
-            <div class="navbar-brand">
-                <h1>SHASHAFLIX</h1>
+          <div class="navbar-brand">
+                <img src="logo.png" alt="SHASHAFLIX Logo" class="navbar-logo-img">
             </div>
         </div>
 
