--- a/watch.html
+++ b/watch.html
@@ -31,10 +31,9 @@
 <body>
 
     <header class="navbar">
-        <div class="navbar-brand"><h1>SHASHAFLIX</h1></div>
-        <div class="nav-account">
-            <a href="index.html" class="btn btn-secondary">➜ عودة للرئيسية</a>
-        </div>
+     <div class="navbar-brand">
+    <img src="hero-logo.png" alt="SHASHAFLIX" style="height: 40px; vertical-align: middle;">
+</div>
     </header>
 
     <div class="watch-container">
