--- a/watch.html
+++ b/watch.html
@@ -32,7 +32,7 @@
 
     <header class="navbar">
      <div class="navbar-brand">
-    <img src="hero-logo.png" alt="SHASHAFLIX" style="height: 40px; vertical-align: middle;">
+    <img src="logo.png" alt="SHASHAFLIX" style="height: 40px; vertical-align: middle;">
 </div>
     </header>
 
@@ -158,4 +158,5 @@
     </script>
 
 </body>
+
 </html>
