--- a/watch.html
+++ b/watch.html
@@ -48,7 +48,7 @@
     </div>
 
     <script>
-        // رابط السيرفر (Render)
+        // رابط السيرفر
         const renderBaseUrl = 'https://shashaflix.onrender.com';
 
         const urlParams = new URLSearchParams(window.location.search);
@@ -64,19 +64,16 @@
             try {
                 const response = await fetch(`${renderBaseUrl}/api/works`);
                 const works = await response.json();
+                
+                // البحث عن المسلسل بالـ ID
                 const currentWork = works.find(work => work.id === seriesId);
 
-                // هنا السحر: نقرأ البيانات سواء كانت خريطة أو نص JSON
-                if (currentWork && currentWork.seasons_data) {
-                    // تحويل النص إلى كائن بيانات
-                    try {
-                        currentSeasonsData = JSON.parse(currentWork.seasons_data);
-                        initSeasons();
-                    } catch (e) {
-                        episodesContainer.innerHTML = "<p style='color:red; padding:20px;'>خطأ في تنسيق البيانات في Firebase.</p>";
-                    }
+                // هنا التغيير: نقرأ حقل "seasons" مباشرة ككائن (Object) وليس كنص
+                if (currentWork && currentWork.seasons) {
+                    currentSeasonsData = currentWork.seasons;
+                    initSeasons();
                 } else {
-                    episodesContainer.innerHTML = "<p style='color:white; padding:20px; text-align:center;'>لا توجد حلقات مضافة.</p>";
+                    episodesContainer.innerHTML = "<p style='color:white; padding:20px; text-align:center;'>لا توجد حلقات مضافة لهذا العمل.</p>";
                 }
             } catch (error) {
                 console.error(error);
@@ -116,7 +113,7 @@
                     };
                     episodesContainer.appendChild(div);
                 });
-                // تشغيل الحلقة الأولى تلقائياً
+                // تشغيل الحلقة الأولى
                 player.src = episodes[0].url;
                 episodesContainer.children[0].classList.add('active');
             } else {
