--- a/watch.html
+++ b/watch.html
@@ -54,13 +54,24 @@
             // يجب أن يكون هذا الاسم هو نفس الـ ID الموجود في Firebase بالضبط
             // مثال: إذا كان ID المسلسل في فايربيس هو "Dexter_S1"، اكتبه هنا كما هو
             
-            "هنا_ضع_ايدي_المسلسل_من_فايربيس": { 
+            "Boku No Hero": { 
                 "1": [ // الموسم 1
-                    { title: "الحلقة 1", url: "https://www.youtube.com/embed/VIDEO_ID" },
-                    { title: "الحلقة 2", url: "https://www.youtube.com/embed/VIDEO_ID" }
+                    { title: "الحلقة 1", url: "#" },
+                    { title: "الحلقة 2", url: "#" }
+                      { title: "الحلقة 3", url: "#" }
+                      { title: "الحلقة 4", url: "#" }
+                      { title: "الحلقة 5", url: "#" }
+                      { title: "الحلقة 6", url: "#" }
+                      { title: "الحلقة 7", url: "#" }
+                      { title: "الحلقة 8", url: "#" }
+                      { title: "الحلقة 9", url: "#" }
+                      { title: "الحلقة 10", url: "#" }
+                      { title: "الحلقة 11", url: "#" }
+                      { title: "الحلقة 12", url: "#" }
+                      { title: "الحلقة 13", url: "#" }
                 ],
                 "2": [ // الموسم 2
-                    { title: "الحلقة 1", url: "https://www.youtube.com/embed/VIDEO_ID" }
+                    { title: "الحلقة 1", url: "#" }
                 ]
             },
 
@@ -127,3 +138,4 @@
 
 </body>
 </html>
+
