--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <section class="category-row">
             <h2 id="latest-title">أحدث الإضافات</h2>
-            <div class="row-posters" id="latest-row"></div>
+        <div class="grid-posters" id="latest-row"></div>
         </section>
 
     </main>
